[gd_scene load_steps=14 format=3 uid="uid://p04kros6agej"]

[ext_resource type="Script" path="res://scripts/pso_widget.gd" id="1_a5b5m"]
[ext_resource type="Material" uid="uid://dp7a3pqw8vton" path="res://textures/widget_highlight_material.tres" id="2_nbscd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7oefa"]
radius = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_d6upq"]
radius = 1.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4628j"]
no_depth_test = true
shading_mode = 0
albedo_color = Color(0.788235, 0, 0.698039, 1)

[sub_resource type="SphereMesh" id="SphereMesh_qyqwj"]
flip_faces = true
radius = 1.1
height = 2.2

[sub_resource type="TextMesh" id="TextMesh_xgojq"]
resource_local_to_scene = true
text = "1"
pixel_size = 0.074

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o5u67"]
render_priority = 1
no_depth_test = true
shading_mode = 0
billboard_mode = 1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_su6tu"]
resource_local_to_scene = true
radius = 0.2
height = 6.0

[sub_resource type="CylinderMesh" id="CylinderMesh_4h7ef"]
resource_local_to_scene = true
top_radius = 0.0
height = 1.0

[sub_resource type="SphereMesh" id="SphereMesh_0efdl"]
radius = 1.0
height = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_mnxhx"]
resource_local_to_scene = true
top_radius = 0.0
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hrj15"]
no_depth_test = true
shading_mode = 0
grow_amount = 0.847

[node name="PRPWidget" type="Node3D"]
script = ExtResource("1_a5b5m")

[node name="WidgetMoveOrigin" type="StaticBody3D" parent="."]
collision_layer = 16
collision_mask = 16
metadata/WidgetType = "RoadPoint"

[node name="CollisionShape3D" type="CollisionShape3D" parent="WidgetMoveOrigin"]
shape = SubResource("SphereShape3D_7oefa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D"]
mesh = SubResource("SphereMesh_d6upq")
surface_material_override/0 = SubResource("StandardMaterial3D_4628j")

[node name="MeshHighlightOrigin" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D"]
cast_shadow = 0
mesh = SubResource("SphereMesh_qyqwj")
surface_material_override/0 = ExtResource("2_nbscd")

[node name="Idx" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D"]
mesh = SubResource("TextMesh_xgojq")
surface_material_override/0 = SubResource("StandardMaterial3D_o5u67")

[node name="Dir" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_su6tu")
surface_material_override/0 = SubResource("StandardMaterial3D_4628j")

[node name="DirCone" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D/Dir"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 1.31134e-07)
mesh = SubResource("CylinderMesh_4h7ef")
surface_material_override/0 = SubResource("StandardMaterial3D_4628j")

[node name="DirShadow" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_su6tu")

[node name="DirShadowCone" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D/DirShadow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 1.31134e-07)
mesh = SubResource("CylinderMesh_4h7ef")

[node name="ShadowMesh" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D"]
mesh = SubResource("SphereMesh_0efdl")

[node name="UpDir" type="Node3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="Up" type="MeshInstance3D" parent="WidgetMoveOrigin/CollisionShape3D/MeshInstance3D/UpDir"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -8.74228e-08, -2)
mesh = SubResource("CylinderMesh_mnxhx")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_hrj15")
